# dailyrecord

./: .gitignore  Cargo.toml  index.html  rustfmt.toml
scripts/: dev-serve.sh  install-trunk.sh  prod-build.sh
src/: dev.rs  lib.rs  main.rs
src/component/: app.rs  mod.rs  route.rs  style.rs
src/component/calendar/: control.rs  day.rs  mod.rs  month.rs  props.rs  state.rs  view.rs
src/component/calendar/week/: mod.rs  view.rs
src/component/header/: mod.rs  props.rs  state.rs  view.rs
src/component/style/: align.rs  logo.rs  mod.rs  route.rs
src/components/: app.rs  mod.rs  route.rs
src/components/calendar/: control.rs  mod.rs  state.rs  view.rs
src/components/calendar/week/: mod.rs  view.rs
src/components/episode/: view.rs
src/components/events/: view.rs
src/components/events/models/: category.rs  event.rs  plan.rs
src/components/header/: view.rs
src/components/style/: align.rs  logo.rs  mod.rs  tailwind.rs  theme.rs
src/domain/: mod.rs
src/domain/class/: id.rs
src/domain/entity/: config.rs  mod.rs
src/domain/entity/episode/: category.rs  episode.rs  mod.rs  plan.rs  schedule.rs
src/domain/entity/event/: event.rs  mod.rs
src/event/: category.rs  mod.rs  plan.rs
src/page/: mod.rs
src/page/calendar/: mod.rs  week.rs
src/page/calender/: day.rs  mod.rs  week.rs
src/repository/: config.rs  episode.rs  event.rs
src/supply/: arith_duration.rs  duration.rs  mod.rs  now.rs  serde_duration.rs
