[package]
name = "dailyrecord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "^0.19"
chrono = { version = "^0", features = ["serde"] }
serde = "^1"
serde_with = { version = "^2", features = ["chrono"] }
