[package]
name = "dailyrecord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "^0.20"
yew_icons = { version = "^0.7", features = ["heroicons_solid"] }
yew-router = "^0.17"

log = "^0"
wasm-logger = "^0"

chrono = { version = "^0", features = ["serde"] }
serde = "^1"
serde_with = { version = "^2", features = ["chrono"] }
once_cell = "^1"
anyhow = "^1"
